--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@react-google-maps/api": "^2.20.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -21,8 +23,11 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.3",
+    "react-two-thumb-input-range": "^1.0.7",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
+    "slick-carousel": "^1.8.1",
     "swiper": "^11.2.1",
     "web-vitals": "^2.1.4"
   },
