--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.3.1",
     "react-big-calendar": "^1.14.1",
     "react-dom": "^18.3.1",
+    "react-easy-crop": "^5.2.0",
     "react-i18next": "^15.0.1",
     "react-icons": "^5.2.1",
     "react-international-phone": "^4.4.0",
