--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^3.52.0",
+    "crypto-js": "^4.2.0",
+    "firebase": "^11.3.1",
     "google-maps-react": "^2.0.6",
     "i18next": "^23.14.0",
     "i18next-browser-languagedetector": "^8.0.0",
@@ -26,6 +28,7 @@
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.3",
+    "react-toastify": "^11.0.5",
     "react-two-thumb-input-range": "^1.0.7",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
